feat(ChatController): add end-points for avatar management
