# backend/chat-service/src/main/java/org/linkwave/chatservice/chat/ChatController.java
@@ -10,9 +10,11 @@ import org.linkwave.chatservice.chat.duo.NewChatRequest;
 import org.linkwave.chatservice.chat.group.GroupChatDetailsDto;
 import org.linkwave.chatservice.chat.group.GroupChatDto;
 import org.linkwave.chatservice.chat.group.NewGroupChatRequest;
+import org.linkwave.chatservice.common.UnacceptableRequestDataException;
 import org.springframework.data.util.Pair;
 import org.springframework.lang.NonNull;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 
@@ -20,6 +22,8 @@ import static org.linkwave.chatservice.common.RequestUtils.requestInitiator;
 import static org.linkwave.chatservice.common.RequestUtils.userDetails;
 import static org.linkwave.shared.utils.Headers.TOTAL_COUNT;
 import static org.springframework.http.HttpStatus.CREATED;
+import static org.springframework.http.HttpStatus.OK;
+import static org.springframework.http.MediaType.*;
 
 @Slf4j
 @RestController
@@ -56,6 +60,43 @@ public class ChatController {
     @GetMapping("/{id}/group")
     public GroupChatDetailsDto getGroupChat(@PathVariable String id) {
         return chatService.getGroupChatDetails(userDetails().id(), id);
+    }
+
+    @PostMapping("/{id}/group/avatar")
+    @ResponseStatus(CREATED)
+    public void uploadGroupChatAvatar(@PathVariable String id,
+                                      @NonNull @RequestPart("file") MultipartFile[] files) {
+
+        log.debug("-> uploadAvatar(): [{}] files", files.length);
+        if (files.length > 1) {
+            throw new UnacceptableRequestDataException("Only one file can be uploaded per request");
+        }
+
+        final MultipartFile targetFile = files[0];
+        if (targetFile.isEmpty()) {
+            throw new UnacceptableRequestDataException("Uploaded file can not be empty");
+        }
+        chatService.changeGroupChatAvatar(id, targetFile);
+    }
+
+    @GetMapping(
+            value = "/{id}/group/avatar",
+            produces = {
+                    IMAGE_PNG_VALUE,
+                    IMAGE_GIF_VALUE,
+                    IMAGE_JPEG_VALUE,
+                    "image/jpg",
+                    "image/webp"
+            }
+    )
+    public byte[] getGroupChatAvatar(@PathVariable String id) {
+        return chatService.getGroupChatAvatar(id);
+    }
+
+    @DeleteMapping("{id}/group/avatar")
+    @ResponseStatus(OK)
+    public void deleteGroupChatAvatar(@PathVariable String id) {
+        chatService.deleteGroupChatAvatar(id);
     }
 
 }
