# backend/chat-service/src/main/resources/static/openapi.json
@@ -190,6 +190,135 @@
         }
       }
     },
+    "/v1/chats/{id}/group/avatar": {
+      "parameters": [
+        {
+          "$ref": "#/components/parameters/id"
+        }
+      ],
+      "get": {
+        "summary": "Retrieve the group chat avatar",
+        "responses": {
+          "200": {
+            "description": "Group chat avatar",
+            "content": {
+              "image/png": {},
+              "image/jpeg": {},
+              "image/jpg": {},
+              "image/webp": {},
+              "image/gif": {}
+            }
+          },
+          "404": {
+            "description": "Requested avatar was not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                },
+                "example": {
+                  "path": "/api/v1/chats/65e8b0e4404b9356a273e305/group/avatar",
+                  "message": "Requested resource not found",
+                  "status": 404,
+                  "timestamp": 1709825321.086538400
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Multipart request to upload group chat avatar",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "object",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Group chat avatar was successfully changed"
+          },
+          "400": {
+            "description": "Common possible errors that may happen during avatar uploading",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                },
+                "examples": {
+                  "example 1": {
+                    "value": {
+                      "path": "/api/v1/chats/65e8b0e4404b9356a273e305/group/avatar",
+                      "message": "Received file is not an image",
+                      "status": 400,
+                      "timestamp": 1709820925.785678700
+                    }
+                  },
+                  "example 2": {
+                    "value": {
+                      "path": "/api/v1/chats/65e8b0e4404b9356a273e305/group/avatar",
+                      "message": "Only one file can be uploaded per request",
+                      "status": 400,
+                      "timestamp": 1709820925.785678700
+                    }
+                  },
+                  "example 3": {
+                    "value": {
+                      "path": "/api/v1/chats/65e8b0e4404b9356a273e305/group/avatar",
+                      "message": "Maximum upload size exceeded",
+                      "status": 400,
+                      "timestamp": 1709820925.785678700
+                    }
+                  },
+                  "example 4": {
+                    "value": {
+                      "path": "/api/v1/chats/65e8b0e4404b9356a273e305/group/avatar",
+                      "message": "Uploaded file can not be empty",
+                      "status": 400,
+                      "timestamp": 1709821262.760822800
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete uploaded group chat avatar",
+        "responses": {
+          "200": {
+            "description": "Uploaded avatar was successfully deleted"
+          },
+          "404": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                },
+                "example": {
+                  "path": "/api/v1/chats/65e8b0e4404b935a273e305/group/avatar",
+                  "message": "requested chat not found",
+                  "status": 404,
+                  "timestamp": 1709820925.785678700
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/chats/{id}/messages": {
       "parameters": [
         {
